--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
 // app global css in SCSS form
+#sticky-nav {
+  width: 98%;
+  margin: 0 auto;
+  border-radius: 50px;
+}
+
+.q-footer {
+  background-color: transparent;
+}
