--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,3 +8,11 @@
 .q-footer {
   background-color: transparent;
 }
+
+.q-btn-fullwidth {
+  width: 100%;
+}
+
+.login-form-wrapper {
+  padding: 0 5%;
+}
